--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,12 +44,23 @@ jobs:
         run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
-      - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-artifact@v3
+      
+      - name: Publish
+        uses: cloudflare/pages-action@1
         with:
-          name: cmatira_com
-          path: ./_site
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: cmatira-test # e.g. 'my-project'
+          directory: ./_site # e.g. 'dist'
+          # gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
+#      - name: Upload artifact
+#        # Automatically uploads an artifact from the './_site' directory by default
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: cmatira_com
+#          path: ./_site
+#          retention-days: 14
 
   # Deployment job (comment this for now I want to deploy in cloudfare)
 #  deploy:
