--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -45,31 +45,19 @@ jobs:
         env:
           JEKYLL_ENV: production
       
-      - name: Publish
+      - name: Publish to Cloudflare 
         uses: cloudflare/pages-action@1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: cmatira-test # e.g. 'my-project'
-          directory: ./_site # e.g. 'dist'
-          # gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          projectName: cmatira-test 
+          directory: ./_site 
 
-#      - name: Upload artifact
-#        # Automatically uploads an artifact from the './_site' directory by default
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: cmatira_com
-#          path: ./_site
-#          retention-days: 14
+      - name: Upload artifact
+        # Automatically uploads an artifact from the './_site' directory by default
+        uses: actions/upload-artifact@v3
+        with:
+          name: cmatira_com
+          path: ./_site
+          retention-days: 14
 
-  # Deployment job (comment this for now I want to deploy in cloudfare)
-#  deploy:
-#    environment:
-#      name: github-pages
-#      url: ${{ steps.deployment.outputs.page_url }}
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - name: Deploy to GitHub Pages
-#        id: deployment
-#        uses: actions/deploy-pages@v2
