--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,7 +4,7 @@
 # documentation.
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll site to Pages
+name: Deploy Jekyll site to cloudflare
 
 on:
   # Runs on pushes targeting the default branch
@@ -44,14 +44,6 @@ jobs:
         run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
-      
-      - name: Publish to Cloudflare 
-        uses: cloudflare/pages-action@1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: cmatira-test 
-          directory: ./_site 
 
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
@@ -60,4 +52,18 @@ jobs:
           name: cmatira_com
           path: ./_site
           retention-days: 14
+  deploy: 
+    runs-on: ubuntu-latest 
+    steps: 
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: cmatira_com
 
+      - name: Publish to Cloudflare 
+        uses: cloudflare/pages-action@1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: cmatira-prod 
+          directory: ./cmatira_com 
