--- a/_config.yml
+++ b/_config.yml
@@ -73,11 +73,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : google-gtag # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
-
+    tracking_id          : G-PCB5YSSCYP
+    anonymize_ip         : false 
 
 # Site Author
 author:
